--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,16 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -60,6 +67,5 @@
       </plugin>
     </plugins>
   </build>
-
 
 </project>
