--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.12</version>
+    </dependency>
   </dependencies>
-
 
   <build>
     <plugins>
